# shl-activity-recognition-2021

./: .env.dist  .gitignore  README.md  pyproject.toml
additional_data/: rainways.json  subway.json
model/version_18/: features_list.txt  model_hyperparameters.json  trials.json
model/version_19/: features_list.txt  model_hyperparams.json  trials.json
notebooks/: cells_prepare.ipynb  classfication.ipynb  download.ipynb  features_availability.ipynb  features_cell_to_location.ipynb  features_cells.ipynb  features_denys.ipynb  features_distance_to_points.ipynb  features_dmitry.ipynb  features_gps.ipynb  features_location.ipynb  features_wifi.ipynb  fill_na.ipynb  label_prepare.ipynb  location_prepare.ipynb  plot_labels_duration.ipynb  prepare_bus_stop.ipynb  preprocess_speed.ipynb  wifi_gps_location_prepare.ipynb  wifi_gps_prepare.ipynb  wifi_prepare.ipynb
shl/: features.py  prepare.py
sql/: bigquery_prediction_analysis.sql  bigquery_prepare_data.sql  bigquery_prepare_test_data.sql  check_columns.sql  prepare_prediction.sql
