[tool.poetry]
name = "shl-2021"
version = "0.1.0"
description = ""
authors = ["Dmitry Balabka <dmitry.balabka@gmail.com>"]
license = "MIT"
packages = [
    { include = "shl" }
]


[tool.poetry.dependencies]
python = "^3.7.1,<3.9"
numpy = "^1.20.2"
pandas = "^1.2.4"
jupyterlab = "^3.0.14"
matplotlib = "^3.4.1"
scikit-learn = "^0.24.2"
pip = "^21"
lightgbm = "^3.2.1"
xgboost = "^1.4.2"
pyarrow = "^4.0.0"
featuretools = "^0.24.0"
plotly = "^4.14.3"
ipywidgets = "^7.6.3"
gensim = "^4.0.1"
tsfresh = "^0.18.0"
pandavro = "^1.6.0"
folium = "^0.12.1"
requests = "^2.25.1"
tqdm = "^4.61.0"
python-dotenv = "^0.17.1"
Shapely = "^1.7.1"
geopandas = "^0.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
